--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.prj.androidboatcom">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,16 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:name=".Global"
         tools:replace="android:icon">
         <activity android:name=".google.GoogleSignInActivity">
 
         </activity>
-        <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".Connect"></activity>
-        <activity android:name=".Start"></activity>
-        <activity android:name=".Main"></activity>
-        <activity android:name=".ui.control.ControlFragment">
+        <activity android:name=".Connect">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,10 +27,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Start"></activity>
         <activity
-            android:name=".ROS"
-            android:theme="@android:style/Theme.NoDisplay"
-
+            android:name=".ui.control.ControlFragment"
+            android:screenOrientation="landscape"
+            ></activity>
+        <activity android:name=".ui.monitorization.MonitorFragment"></activity>
+        <activity android:name=".ui.localization.LocalFragment"
+            ></activity>
+        <activity android:name=".ui.log.LogFragment"
+            ></activity>
+        <activity android:name=".About"
             ></activity>
 
         <!--  android:theme="@android:style/Theme.NoDisplay"-->
@@ -44,7 +50,9 @@
             </intent-filter>
         </service>
         <uses-library android:name="com.google.android.maps" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDRBhnqWRuFnFt6Tu4ymXV3G-JAhJRAB9o"/>
+        <meta-data         android:name="com.google.android.maps.v2.API_KEY"
+
+            android:value="AIzaSyDRBhnqWRuFnFt6Tu4ymXV3G-JAhJRAB9o"/>
     </application>
 
 </manifest>
